Fixed Scrollbar and adjusted spacing around text

--- a/src/Joke.css
+++ b/src/Joke.css
@@ -11,14 +11,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 1rem;
+    margin-right: 1.5rem;
     width: 15%;
 }
 
 .Joke-text{
     width:75%;
     font-size: 1rem;
-    margin-right: 1rem;
+    margin-right: 1.8rem;
 }
 
 .Joke-votes{
@@ -77,6 +77,7 @@
   }
 
 .Joke-smiley{
+    margin-left: 0.5rem;
     font-size: 2.4rem;
     margin-left: auto;
     border-radius: 50%;
